--- a/app/src/main/res/layout/activity_patient_profile_informations.xml
+++ b/app/src/main/res/layout/activity_patient_profile_informations.xml
@@ -44,11 +44,11 @@
             android:textSize="28sp" />
 
         <TextView
-            android:id="@+id/cin"
+            android:id="@+id/email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:fontFamily="@font/nunito_sans_bold"
+            android:fontFamily="@font/montserrat"
             android:textSize="20sp" />
 
     </LinearLayout>
@@ -96,12 +96,13 @@
                 app:srcCompat="@drawable/ic_email" />
 
             <TextView
-                android:id="@+id/email"
+                android:id="@+id/cin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/montserrat"
-
                 android:textSize="16sp" />
+
+
         </LinearLayout>
 
         <LinearLayout
@@ -147,6 +148,30 @@
                 android:fontFamily="@font/montserrat"
                 android:textSize="16sp" />
         </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="10dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/setAdd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                app:srcCompat="@drawable/ic_people" />
+
+            <TextView
+                android:id="@+id/setaddr"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat"
+                android:textSize="16sp" />
+        </LinearLayout>
+
 
     </LinearLayout>
 
