--- a/app/src/main/res/layout/add_consultation_dialog.xml
+++ b/app/src/main/res/layout/add_consultation_dialog.xml
@@ -11,7 +11,7 @@
         android:layout_height="64dp"
         android:layout_gravity="center"
         android:background="@drawable/ic_medical_history"
-        android:backgroundTint="#33aeb6"
+        android:backgroundTint="#da0384"
         android:layout_marginBottom="10dp" />
 
     <TextView
@@ -58,14 +58,22 @@
         android:background="@drawable/custom_edittext"
         android:ems="10"
         android:fontFamily="@font/montserrat"
-        android:hint="Price"
+        android:hint="Fees"
         android:inputType="number"
         android:padding="10dp"
         android:textSize="16sp"
         android:layout_marginBottom="15dp"/>
 
+    <Button
+        android:id="@+id/prescription_upload_button"
+        android:layout_width="187dp"
+        android:layout_height="77dp"
+        android:layout_marginLeft="120dp"
+        android:text="Upload prescription photo from gallery." />
+
     <EditText
         android:id="@+id/prescription"
+        android:layout_marginTop="12dp"
         android:layout_width="262dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -75,7 +83,7 @@
         android:lines="8"
         android:minLines="3"
         android:maxLines="6"
-        android:hint="Prescription..."
+        android:hint="Either take a photo of prescription above or type here."
         android:gravity="top"
         android:inputType="textMultiLine"
         android:scrollbars="vertical"
