--- a/app/src/main/res/layout/activity_consultation_info.xml
+++ b/app/src/main/res/layout/activity_consultation_info.xml
@@ -6,12 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".appointment.ConsultationInfoActivity">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="wrap_content"
-            android:layout_height="262dp"
-            android:background="@drawable/consultationbackground" />
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/animationView"
+            android:layout_width="350dp"
+            android:layout_height="350dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="43dp"
+            android:layout_marginEnd="47dp"
+            app:lottie_autoPlay="true"
+            app:lottie_fileName="consultation.json"
+            app:lottie_loop="true" />
+
+    </RelativeLayout>
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profile_image"
         android:layout_width="124dp"
@@ -20,6 +31,7 @@
         android:layout_marginBottom="40dp"
         app:civ_border_color="#FFFFFF"
         app:civ_border_width="2dp" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
