--- a/app/src/main/res/layout/activity_doctor_login.xml
+++ b/app/src/main/res/layout/activity_doctor_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/antique_white"
+    android:background="@color/white"
     android:padding="30dp"
     android:transitionName="transition_login"
     tools:context=".Doctor.Doctor_login">
@@ -27,6 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
             android:fontFamily="@font/muli_black"
+            android:gravity="center"
             android:text="@string/drlogin"
             android:textAllCaps="true"
             android:textColor="@color/black"
@@ -37,23 +38,21 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="80dp">
 
-            <com.hbb20.CountryCodePicker
-                android:id="@+id/login_country_code"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-
-                android:padding="7dp"
-                app:ccp_autoDetectCountry="true"
-                app:ccp_showFlag="true"
-                app:ccp_showFullName="true"
-                app:ccp_showNameCode="true" />
+            <com.leo.simplearcloader.SimpleArcLoader
+                android:visibility="invisible"
+                android:id="@+id/loginloader"
+                android:layout_centerInParent="true"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                app:arc_style="simple_arc"
+                >
+            </com.leo.simplearcloader.SimpleArcLoader>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/login_phone_number"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/login_country_code"
                 android:hint="Enter Email Address"
                 android:textColorHint="@color/black"
                 app:boxStrokeColor="@color/black"
@@ -137,10 +136,13 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/forget_password_block"
                 android:layout_marginTop="18dp"
-                android:background="@color/black"
+                android:background="@drawable/card_1"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
                 android:onClick="DoctorLogIn"
                 android:text="@string/drlogin"
-                android:textColor="@color/white"
+                android:elevation="8dp"
+                android:textColor="@color/black"
                 tools:ignore="NotSibling,OnClick" />
 
             <Button
@@ -150,9 +152,19 @@
                 android:layout_below="@id/doc_login"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="20dp"
-
                 android:background="#00000000"
                 android:text="Create Account" />
+            <Button
+                android:id="@+id/emer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/doc_signup"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"
+                android:background="#00000000"
+                android:textColor="@color/red"
+                android:text="Emergency" />
+
         </RelativeLayout>
 
     </LinearLayout>
