--- a/app/src/main/res/layout/activity_appointments.xml
+++ b/app/src/main/res/layout/activity_appointments.xml
@@ -30,7 +30,7 @@
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#33aeb6"
+            android:background="@color/teal_700"
             app:tabInlineLabel="true"
             app:tabTextColor="#FFFFFF"/>
     </com.google.android.material.appbar.AppBarLayout>
