--- a/app/src/main/res/layout/activity_doctor_appointments.xml
+++ b/app/src/main/res/layout/activity_doctor_appointments.xml
@@ -5,8 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".appointment.DoctorUI.DoctorAppointments"
-    android:layout_marginTop="24dp">
+    tools:context=".appointment.DoctorUI.DoctorAppointments">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_height="wrap_content"
@@ -21,8 +20,8 @@
             android:gravity="center"
             android:minHeight="?actionBarSize"
             android:padding="@dimen/appbar_padding"
-            android:text="Appointments"
-            android:textSize="24sp"
+            android:text="APPOINTMENTS"
+            android:textSize="22sp"
             android:fontFamily="@font/montserrat_bold"
             android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"/>
 
@@ -30,7 +29,7 @@
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#33aeb6"
+            android:background="@color/teal_700"
             app:tabInlineLabel="true"
             app:tabTextColor="#FFFFFF"/>
     </com.google.android.material.appbar.AppBarLayout>
