--- a/app/src/main/res/layout/activity_consultation_info.xml
+++ b/app/src/main/res/layout/activity_consultation_info.xml
@@ -6,23 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".appointment.ConsultationInfoActivity">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-        <com.airbnb.lottie.LottieAnimationView
-            android:id="@+id/animationView"
-            android:layout_width="350dp"
-            android:layout_height="350dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="43dp"
-            android:layout_marginEnd="47dp"
-            app:lottie_autoPlay="true"
-            app:lottie_fileName="consultation.json"
-            app:lottie_loop="true" />
 
-    </RelativeLayout>
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="wrap_content"
+        android:layout_height="238dp"
+        android:background="@drawable/consultationbackground" />
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profile_image"
         android:layout_width="124dp"
@@ -130,6 +120,19 @@
             android:fontFamily="@font/montserrat_bold"
             android:onClick="prescription"
             android:text="Prescription"
+            android:textAllCaps="false"
+            android:textColor="#FFF"
+            android:textSize="16sp" />
+        <Button
+            android:id="@+id/button_download_prescription1"
+            android:layout_marginTop="5dp"
+            android:layout_width="177dp"
+            android:layout_height="36dp"
+            android:layout_gravity="center"
+            android:background="@drawable/custombutton"
+            android:fontFamily="@font/montserrat_bold"
+            android:onClick="display_prescription_photo"
+            android:text="prescription photo"
             android:textAllCaps="false"
             android:textColor="#FFF"
             android:textSize="16sp" />
