--- a/app/src/main/res/layout/activity_details_country.xml
+++ b/app/src/main/res/layout/activity_details_country.xml
@@ -17,7 +17,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimaryDark"
+            android:background="@color/teal_700"
             android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
             >
 
@@ -128,7 +128,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Active"
+                        android:text="Active Cases"
                         android:paddingLeft="10dp"/>
 
                 </LinearLayout>
@@ -233,7 +233,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-light"
-            android:text="Today Cases"
+            android:text="Today"
             android:textStyle="bold"
             android:textSize="18sp"/>
         <TextView
