--- a/app/src/main/res/layout/activity_display_patient_info.xml
+++ b/app/src/main/res/layout/activity_display_patient_info.xml
@@ -113,7 +113,7 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         android:src="@drawable/ic_plus_sign"
-        android:backgroundTint="#33aeb6"
+        android:backgroundTint="@color/teal_700"
         android:onClick="addPatient"
         app:borderWidth="0dp"
 
