--- a/app/src/main/res/layout/activity_doctor_dashboard.xml
+++ b/app/src/main/res/layout/activity_doctor_dashboard.xml
@@ -88,10 +88,11 @@
                     android:elevation="8dp">
 
                     <ImageView
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
                         android:layout_centerInParent="true"
-                        android:src="@drawable/home_ser" />
+                        android:onClick="DocProfile"
+                        android:src="@drawable/doctordpfe" />
 
                 </RelativeLayout>
 
@@ -99,7 +100,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal"
-                    android:text="@string/homeservice"
+                    android:text="Profile"
                     android:textAlignment="center" />
 
             </LinearLayout>
@@ -121,6 +122,7 @@
                         android:layout_width="50dp"
                         android:layout_height="50dp"
                         android:layout_centerInParent="true"
+                        android:onClick="appointmentDoc"
                         android:src="@drawable/appointment" />
 
                 </RelativeLayout>
@@ -220,6 +222,7 @@
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_centerInParent="true"
+                    android:onClick="Patientlist"
                     android:src="@drawable/examination" />
 
             </RelativeLayout>
@@ -246,10 +249,10 @@
                 android:elevation="8dp">
 
                 <ImageView
-                    android:id="@+id/mypatient"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_centerInParent="true"
+                    android:onClick="MyPatients"
                     android:src="@drawable/mypatient" />
 
             </RelativeLayout>
