--- a/app/src/main/res/layout/activity_doctors_by_speciality.xml
+++ b/app/src/main/res/layout/activity_doctors_by_speciality.xml
@@ -3,14 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="24dp"
     android:orientation="vertical"
     tools:context=".appointment.DoctorsBySpecialityActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#00a2b1"
+        android:background="@color/teal_700"
         android:padding="20dp"
         android:theme="@style/AppTheme">
 
@@ -23,7 +22,7 @@
             android:fontFamily="@font/montserrat_bold"
             android:gravity="center"
             android:drawablePadding="5dp"
-            android:text="Dermathologue"
+            android:text="dentist"
             android:textColor="#FFF"
             android:textSize="24sp" />
 
