--- a/app/src/main/res/layout/activity_my_doctors.xml
+++ b/app/src/main/res/layout/activity_my_doctors.xml
@@ -3,14 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="24dp"
     android:orientation="vertical"
     tools:context=".appointment.MyDoctorsActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#00a2b1"
+        android:background="@color/teal_700"
         android:padding="20dp"
         android:theme="@style/AppTheme">
 
@@ -21,9 +20,9 @@
             android:drawableLeft="@drawable/doctor_ic"
             android:drawablePadding="5dp"
             android:fontFamily="@font/montserrat_bold"
-            android:text="My Doctors"
+            android:text="MY DOCTORS"
             android:textColor="#FFF"
-            android:textSize="24sp" />
+            android:textSize="20sp" />
 
 
     </com.google.android.material.appbar.AppBarLayout>
