--- a/app/src/main/res/layout/activity_patient_login.xml
+++ b/app/src/main/res/layout/activity_patient_login.xml
@@ -4,7 +4,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-android:background="@color/teal_700"
+android:background="@color/white"
 android:padding="30dp"
 android:transitionName="transition_login"
 tools:context=".Patient.Patient_login">
