--- a/app/src/main/res/layout/activity_patient_profile_informations.xml
+++ b/app/src/main/res/layout/activity_patient_profile_informations.xml
@@ -14,6 +14,7 @@
         android:layout_height="34dp"
         android:layout_gravity="right"
         android:layout_marginTop="30dp"
+        android:backgroundTint="@color/teal_700"
         android:layout_marginRight="20dp"
 
         android:background="@drawable/ic_edit_1"
@@ -70,6 +71,7 @@
                 android:id="@+id/birthDateView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:backgroundTint="@color/teal_700"
                 android:layout_marginRight="10dp"
                 app:srcCompat="@drawable/ic_cake" />
 
@@ -98,6 +100,7 @@
             <TextView
                 android:id="@+id/cin"
                 android:layout_width="wrap_content"
+                android:backgroundTint="@color/teal_700"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/montserrat"
                 android:textSize="16sp" />
@@ -117,6 +120,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
+                android:backgroundTint="@color/teal_700"
                 app:srcCompat="@drawable/ic_local_phone" />
 
             <TextView
@@ -138,6 +142,7 @@
                 android:id="@+id/statusView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:backgroundTint="@color/teal_700"
                 android:layout_marginRight="10dp"
                 app:srcCompat="@drawable/ic_people" />
 
