--- a/app/src/main/res/layout/activity_patient_signup.xml
+++ b/app/src/main/res/layout/activity_patient_signup.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/teal_700"
+    android:background="@color/white"
     android:padding="30dp"
     android:transitionName="transition_signup"
     tools:context=".Patient.Patient_signup">
@@ -208,7 +208,7 @@
                                     android:elevation="5dp"
                                     android:fontFamily="@font/muli"
                                     android:onClick="callLoginFromSignUp"
-                                    android:text="@string/login"
+                                    android:text="Login"
                                     android:textColor="@color/black"
                                     android:transitionName="transition_login_btn" />
 
