--- a/app/src/main/res/layout/add_consultation_dialog.xml
+++ b/app/src/main/res/layout/add_consultation_dialog.xml
@@ -11,7 +11,7 @@
         android:layout_height="64dp"
         android:layout_gravity="center"
         android:background="@drawable/ic_medical_history"
-        android:backgroundTint="#da0384"
+        android:backgroundTint="@color/black"
         android:layout_marginBottom="10dp" />
 
     <TextView
@@ -19,6 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/montserrat_bold"
+        android:gravity="center"
         android:text="Add consultation"
         android:textSize="20sp"
         android:layout_gravity="center"
@@ -66,9 +67,9 @@
 
     <Button
         android:id="@+id/prescription_upload_button"
-        android:layout_width="187dp"
+        android:layout_width="192dp"
         android:layout_height="77dp"
-        android:layout_marginLeft="120dp"
+        android:layout_marginLeft="100dp"
         android:text="Upload prescription photo from gallery." />
 
     <EditText
@@ -97,13 +98,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="@drawable/custombuttonxx"
+        android:background="@drawable/round_corners"
         android:fontFamily="@font/montserrat"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:text="Add consultation"
         android:textAllCaps="false"
-        android:textColor="#FFF"
+        android:textColor="@color/black"
 
         android:textSize="16sp" />
 </LinearLayout>
