--- a/app/src/main/res/layout/add_hospitalisation_dialog.xml
+++ b/app/src/main/res/layout/add_hospitalisation_dialog.xml
@@ -85,13 +85,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="@drawable/custombuttonxx"
+        android:background="@drawable/round_corners"
         android:fontFamily="@font/montserrat"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:text="Add hospitalisation"
         android:textAllCaps="false"
-        android:textColor="#FFF"
+        android:textColor="@color/black"
 
         android:textSize="16sp" />
 </LinearLayout>
