--- a/app/src/main/res/layout/fragment_doctor_appointments.xml
+++ b/app/src/main/res/layout/fragment_doctor_appointments.xml
@@ -5,7 +5,7 @@
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DoctorUI.ui.main.PlaceholderFragment">
+    tools:context=".appointment.DoctorUI.ui.main.PlaceholderFragment">
 
     <TextView
         android:id="@+id/section_label"
