--- a/app/src/main/res/layout/fragmentone_layout.xml
+++ b/app/src/main/res/layout/fragmentone_layout.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/teal_200">
+    android:background="@color/white">
 
     <ListView
         android:id="@+id/myListView"
