--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -80,8 +80,8 @@
     <color name="medium_spring_green">#00FA9A</color>
     <color name="dark_turquoise">#00CED1</color>
 
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimary">#FF018786</color>
+    <color name="colorPrimaryDark">#FF018786</color>
     <color name="colorAccent">#03DAC5</color>
 
 
